@@ -1,3 +1,6 @@
+2017-03-16  Jean-Louis Martineau <JMartineau@carbonite.com>
+	* common-src/file.c: Fix crash if read return -1
+
 2017-03-15  Jean-Louis Martineau <JMartineau@carbonite.com>
 	* perl/Amanda/Curinfo/Info.pm: Fix writting the stats line
 
